--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.6.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -17,6 +21,18 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "short-unique-id": "^4.4.4",
+    "typescript": "4.8.4",
+    "zod": "^3.19.1"
+  },
+  "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.7",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "prisma": "^4.6.1",
+    "prisma-erd-generator": "^1.2.3",
+    "tailwindcss": "^3.2.4",
+    "tsx": "^3.12.1"
   }
 }
