Ajuste tb vendas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["aimee", "descrption", "Downshifter", "Mizuno", "pixkey"]
+  "cSpell.words": [
+    "aimee",
+    "descripion",
+    "descrption",
+    "Downshifter",
+    "Mizuno",
+    "pixkey"
+  ]
 }
