--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@prisma/client": "^4.6.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-datepicker": "4.4.2",
     "@types/react-dom": "18.0.9",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
+    "prisma-yup-generator": "^0.2.0",
     "react": "18.2.0",
+    "react-datepicker": "4.8.0",
     "react-dom": "18.2.0",
     "short-unique-id": "^4.4.4",
     "typescript": "4.8.4",
+    "yup": "^0.32.11",
     "zod": "^3.19.1"
   },
   "devDependencies": {
